@@ -1,0 +1,1 @@
+try { 1 div 0 } catch "http://www.w3.org/2005/xqt-errors":* { "Message"}
